update yarn lockfile

--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -6,8 +6,8 @@ html {
   height: 100%;
   font-family: sans-serif;
   line-height: 1.5;
-  max-width: 100vw;
-  overflow-x: hidden;
+  // max-width: 100vw;
+  // overflow-x: hidden;
 }
 
 *,
