--- a/resources/assets/styles/layouts/_posts.scss
+++ b/resources/assets/styles/layouts/_posts.scss
@@ -13,7 +13,7 @@ body.blog {
     }
 
     &.sticky {
-      background-color: whitesmoke;
+      background-color: rgba(black, 0.25);
       border-left: solid 10px dimgrey;
     }
 
