--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -1,8 +1,8 @@
-@import "common/variables";
-@import "common/util";
+@import 'common/variables';
+@import 'common/util';
 
 /** Import everything from autoload */
-@import "./autoload/**/*";
+@import './autoload/**/*';
 
 /**
  * Import npm dependencies
@@ -13,14 +13,14 @@
 // @import "~some-node-module";
 
 /** Import theme styles */
-@import "common/global";
-@import "components/buttons";
-@import "components/comments";
-@import "components/forms";
-@import "components/wp-classes";
-@import "layouts/header";
-@import "layouts/sidebar";
-@import "layouts/footer";
-@import "layouts/pages";
-@import "layouts/posts";
-@import "layouts/tinymce";
+@import 'common/global';
+@import 'components/buttons';
+@import 'components/comments';
+@import 'components/forms';
+@import 'components/wp-classes';
+@import 'layouts/header';
+@import 'layouts/sidebar';
+@import 'layouts/footer';
+@import 'layouts/pages';
+@import 'layouts/posts';
+@import 'layouts/tinymce';
