--- a/resources/assets/styles/layouts/_tinymce.scss
+++ b/resources/assets/styles/layouts/_tinymce.scss
@@ -6,6 +6,7 @@ body#tinymce {
   margin-left: calc(-100vw / 2 + 100% / 2);
   margin-right: calc(-100vw / 2 + 100% / 2);
   max-width: 100vw;
+  width: 100vw;
 }
 
 figcaption {
@@ -19,7 +20,7 @@ blockquote,
 .wp-block-quote.is-style-large {
   border-inline-start: solid 4px $black;
   padding: $spacer/2 $spacer;
-  background-color: whitesmoke;
+  background-color: rgba(black, 0.25);
 }
 
 .wp-block-pullquote blockquote {
@@ -35,7 +36,7 @@ blockquote,
     font-size: 7rem;
     color: lightgrey;
     font-family: serif;
-    content: "\201C";
+    content: '\201C';
     left: -2rem;
     top: -2rem;
   }
