--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -1,8 +1,10 @@
+@use 'sass:math';
+
 @import 'common/variables';
 @import 'common/util';
 
 /** Import everything from autoload */
-@import './autoload/**/*';
+// @import './autoload/**/*';
 
 /**
  * Import npm dependencies
