--- a/resources/style.css
+++ b/resources/style.css
@@ -1,6 +1,7 @@
 /*
 Theme Name:         Sage Jump Start
-Theme URI:          https://8bit-echo.comsage/
+Theme URI:          https://8bit-echo.com/sage/
+GitHub Theme URI:   8bit-echo/sage-starter
 Description:        Sage is a WordPress starter theme.
 Version:            9.0.9
 Author:             8Bit-Echo
