--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -14,7 +14,7 @@ html {
   margin: 0;
   width: 100%;
   height: 100%;
-  font-family: sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   line-height: 1.5;
   background: var(--background);
   color: var(--text-color);
