--- a/resources/assets/styles/layouts/_footer.scss
+++ b/resources/assets/styles/layouts/_footer.scss
@@ -2,7 +2,7 @@ footer.site-footer {
   margin-top: $spacer;
   background: $black;
   color: $white;
-  padding: $spacer $spacer/2;
+  padding: $spacer math.div($spacer, 2);
 
   a {
     color: white;
