Update base theme name

--- a/resources/style.css
+++ b/resources/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name:         Sage Jump Start
+Theme Name:         Sage Vite
 Theme URI:          https://8bit-echo.com/sage/
-GitHub Theme URI:   8bit-echo/sage-starter
+GitHub Theme URI:   8bit-echo/sage-vite
 Description:        Sage is a WordPress starter theme.
 Version:            9.0.9
 Author:             8Bit-Echo
